[gd_scene load_steps=6 format=3 uid="uid://cvxfvcvt0112y"]

[ext_resource type="Theme" uid="uid://df82jcs7jy51d" path="res://audio_polyphony/interface/theme.tres" id="1_juqhc"]
[ext_resource type="Script" path="res://audio_polyphony/audio_polyphony.gd" id="2_81xos"]
[ext_resource type="Texture2D" uid="uid://beumur3oint63" path="res://ui_flexbox/assets/background.png" id="2_uqchy"]
[ext_resource type="AudioStream" uid="uid://fcphmrxu1hq7" path="res://audio_polyphony/completetask_0.mp3" id="3_shjmb"]

[sub_resource type="LabelSettings" id="LabelSettings_i75i3"]
font_size = 32

[node name="AudioPolyphony" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_juqhc")
script = ExtResource("2_81xos")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_uqchy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -234.0
offset_right = 370.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Polyphony"
label_settings = SubResource("LabelSettings_i75i3")

[node name="PolyphonyLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_i75i3")
horizontal_alignment = 2

[node name="PolyphonySlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Playback Quantity"
label_settings = SubResource("LabelSettings_i75i3")

[node name="PlaybackLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_i75i3")
horizontal_alignment = 2

[node name="PlaybackSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duration of Burst"
label_settings = SubResource("LabelSettings_i75i3")

[node name="BurstLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_i75i3")
horizontal_alignment = 2

[node name="BurstSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 161.0
offset_right = 78.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Play!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_shjmb")
